2009-01-28  Stefan Kost  <ensonic@users.sf.net>

	* style-classic.css:
	* style.css:
	* tests/gobject/docs/tester-docs.xml:
	* tests/gobject/src/gobject.c:
	  Major CSS cleanup. This is hopefully an end of layout issues related
	  to the fixed navigation bar.

2009-01-28  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtkdoc-mkdb.in:
	* tests/gobject/src/giface.c:
	* tests/gobject/src/gobject.c:
	  Abbreviation where not expanded at the start of text. Fixes #569339.

2009-01-28  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-fixxref.in:
	* tests/gobject/examples/gobject.c:
	  Expand urls in comments of examples.

2009-01-27  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-fixxref.in:
	* style.css:
	  Use tables like described in #536928.

	* tests/tools.sh
	  Comment on why we do the tool check like this.
  
	* tests/fail.sh:
	  Comment on test.

	* tests/gobject/docs/tester-docs.xml:
	  Fix xml a bit.

2009-01-26  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* tests/bugs/src/tester.h:
	* tests/fail.sh:
	* tests/fail/docs/tester-docs.xml:
	* tests/fail/docs/tester-sections.txt:
	* tests/fail/src/tester.c:
	  Add public symbols from section file when doing the -undocumented.txt
	  report. Also add the special symbols for the section docs when reading
	  the section-file. Extend test suite to check for it. Fixes #568732

2009-01-26  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-scan.in:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.c:
	* tests/bugs/src/tester.h:
	  Handle inline functions in headers. Fixes #532395.

2009-01-26  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	  Mention onine site for regexp testing.

	* gtkdoc-mkdb.in:
	  Small output cleanups.

	* gtkdoc-mktmpl.in:
	  Indenting and use LogWarning once more.

2009-01-23  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Recomment out debug log the accidentialy went in.

	* configure.in:
	* tests/Makefile.am: