@@ -1,3 +1,11 @@
+2009-01-29  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtkdoc-mkdb.in:
+	  Automatically creating ulinks for urls.
+
+	* tests/gobject/src/gobject.c:
+	  Add a link for testing.
+
 2009-01-28  Stefan Kost  <ensonic@users.sf.net>
 
 	* style-classic.css:
